<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_fragment_title" android:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp" android:id="@+id/textViewTitleRegister" android:textSize="20sp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegister" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">
            <TextView
                    android:text="@string/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewEmail"
                    android:labelFor="@id/editTextEmail"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editTextEmail" android:hint="@string/email_hint"
                    android:minHeight="48dp" android:textColorLink="@color/blue_1"
            />
            <TextView
                    android:text="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewPassword"
                    android:labelFor="@id/editTextPassword"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextPassword" android:hint="@string/password_hint"
                    android:minHeight="48dp"/>
            <Button
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/buttonLogin"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue_1" android:fontFamily="@font/roboto_bold"
                    android:minWidth="328dp" android:maxWidth="400dp" android:onClick="onClickLogin"
                    android:height="60dp"/>
            <ImageView
                    android:src="@drawable/has_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/imageView3"
                    android:minHeight="30dp" android:layout_marginTop="30dp" android:layout_marginBottom="30dp"/>
            <Button
                    android:text="@string/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/buttonRegister"
                    android:backgroundTint="@color/green_1" android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false" android:onClick="onClickSwitchRegister" android:height="60dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>